--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^4.8.2",
     "fuse.js": "^3.2.0",
     "gsap": "^1.20.3",
+    "ng2-page-scroll": "^4.0.0-beta.12",
     "ng2-scrollspy": "^0.3.9",
     "rxjs": "^5.5.2",
     "scrollmagic": "^2.0.5",
