--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
     "angular2-google-maps": "^0.17.0",
     "angularfire2": "^5.0.0-rc.4",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "firebase": "^4.8.2",
     "fuse.js": "^3.2.0",
