--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
+    "@types/jquery": "^3.3.1",
     "angular2-google-maps": "^0.17.0",
     "angularfire2": "^5.0.0-rc.4",
     "classlist.js": "^1.1.20150312",
@@ -31,6 +32,7 @@
     "firebase": "^4.8.2",
     "fuse.js": "^3.2.0",
     "gsap": "^1.20.3",
+    "jquery": "^3.3.1",
     "ng2-page-scroll": "^4.0.0-beta.12",
     "ng2-scrollspy": "^0.3.9",
     "rxjs": "^5.5.2",
